Scheduler defined as a management command

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -2,12 +2,20 @@
 nodaemon=true
 
 [program:uwsgi]
-#command=/usr/sbin/uwsgi --ini /etc/uwsgi/uwsgi.ini --die-on-term
 command=/venv/bin/uwsgi --ini /etc/uwsgi/uwsgi.ini --die-on-term
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:scheduler]
+command=/venv/bin/python manage.py scheduler
+directory=/tesla
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+stopsignal=TERM
 
 [program:nginx]
 command=/usr/sbin/nginx
