Moved static URL to match with deployment

--- a/docker/django-site-nginx.conf
+++ b/docker/django-site-nginx.conf
@@ -14,6 +14,9 @@ server {
     #location /media {
     #    alias /tesla/media;
     #}
+    location /supervisor/static {
+        alias /tesla/static;
+    }
     location ~ ^/(apple-touch-icon|browserconfig|favicon|mstile)(.*)\.(png|xml|ico)$ {
         root /tesla/static/ico;
     }
