Fixed static file generation on Dockercompose

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -91,5 +91,9 @@ COPY docker/uwsgi.ini /etc/uwsgi/
 # Custom Supervisord config
 COPY docker/supervisord.conf /etc/supervisord.conf
 
+# Generate static files
+ENV STATICS_PATH=/tesla/static
+RUN /venv/bin/python manage.py collectstatic --noinput
+
 CMD ["/usr/bin/supervisord"]
 ENTRYPOINT ["docker-entrypoint.sh"]
