swarm deploy all services

--- a/src/tesla_ce_supervisor/lib/deploy/templates/services/database/mysql/swarm/mysql.yaml
+++ b/src/tesla_ce_supervisor/lib/deploy/templates/services/database/mysql/swarm/mysql.yaml
@@ -45,7 +45,8 @@ secrets:
   {% endif %}
   DB_ROOT_PASSWORD:
     file: ./secrets/DB_ROOT_PASSWORD
-
+  VAULT_DB_PASSWORD:
+    file: ./secrets/VAULT_DB_PASSWORD
 networks:
   tesla_public:
     external: true
