--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -5,8 +5,8 @@ plugins = /usr/lib/uwsgi/python3
 # the virtualenv (full path)
 home  = /venv
 
-uid = nginx
-gid = nginx
+uid = root
+gid = root
 
 socket = /tmp/uwsgi.sock
 chown-socket = nginx:nginx
