--- a/src/tesla_ce_supervisor/lib/deploy/templates/services/minio/swarm/minio.yaml
+++ b/src/tesla_ce_supervisor/lib/deploy/templates/services/minio/swarm/minio.yaml
@@ -24,8 +24,12 @@ services:
       {% endif %}
     environment:
       MINIO_REGION_NAME: {{ STORAGE_REGION }}
+      MINIO_BROWSER_REDIRECT_URL: https://storage-console.{{ TESLA_DOMAIN }}
       MINIO_ROOT_USER_FILE: /var/secrets/STORAGE_ACCESS_KEY
       MINIO_ROOT_PASSWORD_FILE: /var/secrets/STORAGE_SECRET_KEY
+      # todo: move to secrets. Secrets not working.
+      MINIO_ROOT_USER: {{ STORAGE_ACCESS_KEY }}
+      MINIO_ROOT_PASSWORD: {{ STORAGE_SECRET_KEY }}
     command:
       - "server"
       - "/data"
