--- a/src/tesla_ce_supervisor/lib/deploy/templates/core/provider/swarm/provider.yaml
+++ b/src/tesla_ce_supervisor/lib/deploy/templates/core/provider/swarm/provider.yaml
@@ -6,7 +6,7 @@ services:
       restart_policy:
         condition: on-failure
       replicas: 1
-      {% if has_service and DEPLOYMENT_LB == "traefik" %}
+      {% if DEPLOYMENT_LB == "traefik" %}
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.{{ acronym }}.rule=Host(`{{ acronym }}.{{ TESLA_DOMAIN }}`)"
@@ -16,23 +16,23 @@ services:
         - "traefik.http.routers.{{ acronym }}.service={{ acronym }}-service"
       {% endif %}
     environment:
-      ROLE_ID_FILE: "/run/secrets/ROLE_ID"
-      SECRET_ID_FILE: "/run/secrets/SECRET_ID"
+      ROLE_ID_FILE: "/run/secrets/{{ provider.acronym|upper }}_ROLE_ID"
+      SECRET_ID_FILE: "/run/secrets/{{ provider.acronym|upper }}_SECRET_ID"
       API_URL: "https://{{ TESLA_DOMAIN }}"
+      {% if DEBUG == True %}
+      SSL_VERIFY: {{ SSL_VERIFY }}
+      {% endif %}
+
     {% for credential in credentials %}
-    {{ credential|upper }}_FILE: /run/secrets/{{ credential|upper }}
+      {{ credential|upper }}_FILE: /run/secrets/{{ credential|upper }}
     {% endfor %}
     secrets:
-      - source: {{ provider.acronym|upper }}_ROLE_ID
-        target: ROLE_ID
-      - source: {{ provider.acronym|upper }}_SECRET_ID
-        target: SECRET_ID
+      - {{ provider.acronym|upper }}_ROLE_ID
+      - {{ provider.acronym|upper }}_SECRET_ID
     {% for credential in credentials %}
-    - source: {{ provider.acronym|upper }}_{{ credential|upper }}
-      target: {{ credential|upper }}
+      - {{ provider.acronym|upper }}_{{ credential|upper }}
     {% endfor %}
     networks:
-      - tesla_public
       - tesla_private
 secrets:
   {{ provider.acronym|upper }}_ROLE_ID:
@@ -44,7 +44,5 @@ secrets:
     file: ./secrets/{{ provider.acronym|upper }}_{{ credential|upper }}
   {% endfor %}
 networks:
-  tesla_public:
-    external: true
   tesla_private:
     external: true
