--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,41 +37,41 @@ jobs:
           expected: ${{ steps.vars.outputs.tag }}
           actual: ${{ steps.vars.outputs.version }}
           comparison: exact
-#  docker_tag:
-#    needs: check
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v1
-#      - name: Store version
-#        id: vars
-#        run: |
-#          echo "{tag}={${GITHUB_REF#refs/*/}}" >> $GITHUB_OUTPUT
-#        # echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#      - name: Build and push
-#        id: docker_build
-#        uses: docker/build-push-action@v2.5.0
-#        with:
-#          push: true
-#          tags: teslace/supervisor:${{ steps.vars.outputs.tag }}, teslace/supervisor:latest
-#          file: docker/Dockerfile
-#      - name: Image digest
-#        run: echo ${{ steps.docker_build.outputs.digest }}
-#      - name: Login to TeSLA CE Registry
-#        uses: docker/login-action@v1
-#        with:
-#            username: ${{ secrets.TESLA_CE_REGISTRY_USERNAME }}
-#            password: ${{ secrets.TESLA_CE_REGISTRY_TOKEN }}
-#            registry: registry.tesla-ce.eu
-#      - name: Push to TeSLA CE registry
-#        run: |
-#          docker pull teslace/supervisor:${{ steps.vars.outputs.tag }}
-#          docker tag teslace/supervisor:${{ steps.vars.outputs.tag }} registry.tesla-ce.eu/tesla-ce/supervisor:latest
-#          docker push registry.tesla-ce.eu/tesla-ce/supervisor:latest
+  docker_tag:
+    needs: check
+    runs-on: ubuntu-latest
+    steps:
+      - name: set up qemu
+        uses: docker/setup-qemu-action@v1
+      - name: store version
+        id: vars
+        run: |
+          echo "tag=${github_ref#refs/*/}" >> $github_output
+        # echo ::set-output name=tag::${github_ref#refs/*/}
+      - name: set up docker buildx
+        uses: docker/setup-buildx-action@v1
+      - name: login to dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.dockerhub_username }}
+          password: ${{ secrets.dockerhub_token }}
+      - name: build and push
+        id: docker_build
+        uses: docker/build-push-action@v2.5.0
+        with:
+          push: true
+          tags: teslace/supervisor:${{ steps.vars.outputs.tag }}, teslace/supervisor:latest
+          file: docker/dockerfile
+      - name: image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: login to tesla ce registry
+        uses: docker/login-action@v1
+        with:
+            username: ${{ secrets.tesla_ce_registry_username }}
+            password: ${{ secrets.tesla_ce_registry_token }}
+            registry: registry.tesla-ce.eu
+      - name: push to tesla ce registry
+        run: |
+          docker pull teslace/supervisor:${{ steps.vars.outputs.tag }}
+          docker tag teslace/supervisor:${{ steps.vars.outputs.tag }} registry.tesla-ce.eu/tesla-ce/supervisor:latest
+          docker push registry.tesla-ce.eu/tesla-ce/supervisor:latest
