--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,11 +42,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: set up qemu
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       - name: store version
         id: vars
         run: |
-          echo "tag=${github_ref#refs/*/}" >> $github_output
+          echo "tag=${github_ref#refs/*/}" >> $GITHUB_OUTPUT
         # echo ::set-output name=tag::${github_ref#refs/*/}
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v1
