--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,8 @@ jobs:
   docker_tag:
     needs: check
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.vars.outputs.tag }}
     steps:
       - name: set up qemu
         uses: docker/setup-qemu-action@v2
@@ -48,6 +50,9 @@ jobs:
         run: |
           echo "tag=${github_ref#refs/*/}" >> $GITHUB_OUTPUT
         # echo ::set-output name=tag::${github_ref#refs/*/}
+      - name: Show captured versions
+        run: |
+          echo 'Tag captured: ${{ steps.vars.outputs.tag }}'
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v1
       - name: login to dockerhub
