--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           push: true
           tags: teslace/supervisor:${{ steps.vars.outputs.tag }}, teslace/supervisor:latest
-          file: docker/dockerfile
+          file: docker/Dockerfile
       - name: image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
       - name: login to tesla ce registry
