--- a/src/tesla_ce_supervisor/lib/deploy/templates/services/vault/swarm/vault.yaml
+++ b/src/tesla_ce_supervisor/lib/deploy/templates/services/vault/swarm/vault.yaml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
   vault:
-    image: vault
+    image: hashicorp/vault
     command:
       - "server"
       - "-config"
