--- a/src/tesla_ce_supervisor/lib/deploy/templates/supervisor/swarm/supervisor.yaml
+++ b/src/tesla_ce_supervisor/lib/deploy/templates/supervisor/swarm/supervisor.yaml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
   supervisor:
-    image: teslace/supervisor:edge
+    image: teslace/supervisor:latest
     deploy:
       placement:
         constraints:
